# nova-browser

./: .gitignore  BUILD.md  Cargo.toml  build-all.ps1  build.rs  download-cef.ps1  download-cef.sh
.cargo/: config.toml
.github/workflows/: build.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/libs/: README.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/novabrowser/: MainActivity.kt  NovaApplication.kt
android/app/src/main/java/com/novabrowser/bridge/: RustBridge.kt
android/app/src/main/java/com/novabrowser/browser/: GeckoViewEngine.kt
android/app/src/main/java/com/novabrowser/ui/: MainScreen.kt
android/app/src/main/java/com/novabrowser/ui/components/: Toolbar.kt
android/app/src/main/java/com/novabrowser/ui/theme/: Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
cef/linux-arm32/: README.txt
cef/linux-arm64/: README.txt
cef/linux64/: README.txt
cef/macos-arm64/: README.txt
cef/macos64/: README.txt
cef/win-arm64/: README.txt
cef/win32/: README.txt
cef/win64/: README.txt
crates/nova-android/: Cargo.toml
crates/nova-android/src/: bridge.rs  lib.rs
crates/nova-app/: Cargo.toml
crates/nova-app/src/: main.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: app.rs  cef_bridge.rs  config.rs  lib.rs  window.rs
crates/nova-features/: Cargo.toml
crates/nova-features/src/: ad_blocker.rs  bookmarks.rs  crx.rs  dev_tools.rs  downloads.rs  extensions.rs  history.rs  incognito.rs  lib.rs  password_manager.rs  reading_mode.rs  settings.rs
crates/nova-ui/: Cargo.toml
crates/nova-ui/src/: address_bar.rs  chrome.rs  lib.rs  settings_ui.rs  sidebar.rs  tab_bar.rs  theme.rs
crates/nova-ui/src/widgets/: buttons.rs  icons.rs  mod.rs
resources/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  zh-CN.json  zh-TW.json
resources/themes/: dark.toml  light.toml
