[package]
name = "nova-android"
version = "0.1.0"
edition = "2021"
authors = ["Nova Browser Team"]
license = "MIT"
description = "Nova Browser Android native library - JNI bridge for GeckoView"

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI bindings (no invocation feature needed - we're called from Java, not creating JVM)
jni = "0.20"
jni-sys.workspace = true

# Core functionality from shared crates
nova-core = { path = "../nova-core" }
nova-features = { path = "../nova-features" }

# Serialization
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "1"

# Logging (Android logcat)
log = "0.4"
android_logger = "0.14"

# Utility
once_cell = "1"

[profile.release]
opt-level = "s"   # Optimize for size on mobile
lto = true
codegen-units = 1
strip = true