[package]
name = "nova-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nova-browser"
path = "src/main.rs"

[dependencies]
# Workspace
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
winit.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true
dirs.workspace = true
uuid.workspace = true
chrono.workspace = true

# Internal crates
nova-core = { path = "../nova-core" }
nova-ui = { path = "../nova-ui" }
nova-features = { path = "../nova-features" }

# Async
pollster = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }