[package]
name = "nova-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
cef-support = []

[dependencies]
# Workspace
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
thiserror.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
dirs.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"