[package]
name = "nova-features"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
ring.workspace = true
dirs.workspace = true
regex.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
glob.workspace = true
image.workspace = true
zip.workspace = true

# Core
nova-core = { path = "../nova-core" }

# Random password generation
rand = "0.8"