[package]
name = "nova-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace
serde.workspace = true
serde_json.workspace = true
log.workspace = true
anyhow.workspace = true
winit.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
raw-window-handle.workspace = true
url.workspace = true
once_cell.workspace = true
chrono.workspace = true
uuid.workspace = true

# Core
nova-core = { path = "../nova-core" }
nova-features = { path = "../nova-features" }